components/gateway/namespace.yaml
# Copyright 2026 BitWise Media Group Ltd
# SPDX-License-Identifier: MIT
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
